bug squash

--- a/style.css
+++ b/style.css
@@ -334,7 +334,7 @@ nav ul li:last-child a, nav ul li:last-child i {
 #map {
   height: 450px;
   flex-basis: 65%;
-  z-index: -1;
+  z-index: 1;
 }
 
 .leaflet-map {
@@ -381,6 +381,7 @@ footer {
   position: fixed;
   bottom: 0px;
   width: 100vw;
+  z-index: 2;
 }
 
 footer h3 {
